# textwrap-cli

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs
t/: README.md
tests/: abc-spaced.txt  cli.rs  lorem.txt
