[package]
name = "textwrap-cli"
version = "0.3.0"
edition = "2024"
description = "Command line interface for textwrap"
license = "MIT"
repository = "https://github.com/qtfkwk/textwrap-cli"

[dependencies]
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }
textwrap = "0.16.2"

[[bin]]
name = "tw"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.17"
