[package]
name = "textwrap-cli"
version = "0.4.3"
edition = "2024"
description = "Command line interface for textwrap"
license = "MIT"
repository = "https://github.com/qtfkwk/textwrap-cli"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
textwrap = "0.16.2"

[[bin]]
name = "tw"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.2.1"
